# MutaPLM

./: .gitignore  .python-version  README.md  eval.py  evaluator.py  example.ipynb  main.py  pyproject.toml  pyproject_backup.toml  trainer.py  utils.py
ckpts/: biomedgpt-lm  esm2-650m
ckpts/mutaplm/: model_checkpoint.pth  model_checkpoint1.pth
ckpts/pretrain/: checkpoint_9.pth
configs/: mutaplm_ft.yaml  mutaplm_inference.yaml  mutaplm_pt.yaml
data/mutadescribe/: test_easy.csv  test_hard.csv  test_medium.csv  train.csv  val.csv
dataset/: __init__.py  finetune_dataset.py  fitness_dataset.py  literature_dataset.py
model/: __init__.py  esm_landscape.py  model_util.py  modeling_esm.py  mutaplm.py  vanllina_esm.py
notebook/: example.ipynb  wt_mutant_2000.ipynb
qsubs/: create_load_model.sh  extract_embeddings.sh  test_embeddings.sh
scripts/: create_load_model.py  extract_embedding.py  extract_embeddings.py  test_embedding.py
scripts/optimize/: evoprotgrad.sh  mutaplm.sh  random.sh
scripts/test/: mutaplm_engineer.sh  mutaplm_explain.sh
scripts/train/: finetune.sh  pretrain.sh
src/: eval.py  evaluator.py  metrics.py  train.py  trainer.py  utils.py
src/model/: __init__.py  model_util.py  vanilla_esm.py
